5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1723_2505.log
== SUBMITION (2019-05-14 10:30:24) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1) ** i * ((ang ** (2 * i + 1) / factorial (2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.15593
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:30:49) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1) ** i * ((x ** (2 * i + 1) / factorial (2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.145355
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:58) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial (2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.119605
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:01) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.167117
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:02) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.153261
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:12) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- ERROR:
File "XXXX", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:34) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- ERROR:
File "XXXX", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:52) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
y = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- ERROR:
File "XXXX", line 4
    y = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:33:08) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.216777
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:33:09) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.141205
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:33:10) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.147162
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:33:10) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.196014
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:33:10) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.196755
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:33:11) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.295784
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:33:11) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.471629
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:33:11) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i <= k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2 * i + 1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.529828
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:33:39) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: ")
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i<=k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2*i+1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- ERROR:
File "XXXX", line 4
    k = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:08) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i<=k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2*i+1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:34:11) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
# Laço
while (i<=k-1):
	soma = soma + (-1)**i * ((x**(2 *i+1) / factorial(2*i+1)))
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.150201
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:44:25) 
-- CODE:
from math import *
#Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variaveis
soma = 0   # Acumulativa
i = 0      # Contadora
sinal = +1
# Laço
while (i<=k-1):
	soma = soma + sinal * ((x**(2*i+1) / factorial(2*i+1)))
	sinal = - sinal
	i = i + 1
# Saida
print(round(soma, 10))
-- EXECUTION TIME:
0.142861
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
